# OpenONDA

./: .gitignore  CITATION.cff  MANIFEST.in  README.md  environment.yml  install_anaconda.sh  install_openfoam.sh  pyproject.toml  setup.cfg  setup.py  setup_environment.py  setup_environment.sh
OpenONDA/: __init__.py  config.py
OpenONDA/solvers/: __init__.py
OpenONDA/solvers/FVM/: __init__.py  build_cython.py  foamSolverWrapper.html  foamSolverWrapper.pyx
OpenONDA/solvers/VPM/: ParticlesPhysicsCuda.py  __init__.py  vpmModule.py
documentation/: conda_environment.yml  environment.yml  fvm_solver.md  openonda_environment.yml  todos.md
documentation/marketing_material/: Logo_V7_Color.pxd  Logotype_v7_BW.pxd
examples/eulerian_module_examples/: CleanAllCases.sh  E0_Test_Communication.ipynb  E1_Run_Vortex_Filament_Flow.py  E2_Run_Vortex_Ring_Flow.py  E3_Run_Inflating_Dipole.py  E4_Run_Doublet_Flow.py  E5_Run_parabolic_flow_over_airfoil.py  E6_Run_LES_simulation.py  info.yaml
examples/eulerian_module_examples/E1_vortex_filament_flow/: Allclean.sh  (+1 more)
examples/lagrangian_module_examples/: Allclean.sh  Allrun.sh  E1_Lamb_Oseen_Vortex.py  E2_Vortex_Ring.py  E3_Ring_Tube_Collision.py  E4_Rings_Collision.py  E5_LeapFrogging_Rings.py
openONDA/: __init__.py  config.py
openONDA/solvers/: __init__.py
openONDA/utilities/: __init__.py  fvm_flow_models.py  fvm_solver_helper.py  scripts_helper.py  vpm_flow_models.py  vpm_solver_helper.py
tests/: environment.yml  test1_import_modules.py  test2_eulerian_solver_communication.py
tests/sample_OF_directory/: Allclean.sh
(+262 files in other folders)
