[metadata]
name = openONDA
version = 0.1.0
author = Flavio Martins
description = Hybrid OpenFOAM and Vortex Particle Method solver
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    scipy
    cython

[options.extras_require]
dev =
    black
    pytest

[build_ext]
inplace = true
